--- a/.travis-ci.yml
+++ b/.travis-ci.yml
@@ -33,6 +33,7 @@ before_install:
 
 install:
 # Build dependencies
+- cabal install happy
 - stack --no-terminal --install-ghc test --only-dependencies
 
 script:
