--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_install:
 
 install:
 # Build dependencies
-- cabal install happy
+- stack install happy
 - stack --no-terminal --install-ghc test --only-dependencies
 
 script:
