--- a/weatherman.cabal
+++ b/weatherman.cabal
@@ -15,11 +15,12 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Example
+  exposed-modules:     Example, Module1
   build-depends:       base >= 4.7 && < 5
                      , aeson
                      , scotty
                      , wai
+                     , interpolate
   default-language:    Haskell2010
 
 executable weatherman-exe
